Added map and buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="previous">Previous</string>
 
     <string name="lorem_ipsum">
-        asdasdas
+        asdasdaskajnsdkjasd
         alksndaklsndklasndlaskajsn dnkas
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
